--- a/Course/Numpy-Learning-1.ipynb
+++ b/Course/Numpy-Learning-1.ipynb
@@ -30,6 +30,11 @@
    "execution_count": 1
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# find dimensions"
+  },
+  {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
@@ -63,6 +68,11 @@
    "execution_count": 2
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "**how to set dimension of ndarray**"
+  },
+  {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
@@ -87,6 +97,11 @@
     }
    ],
    "execution_count": 3
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "---"
   },
   {
    "cell_type": "markdown",
@@ -132,10 +147,10 @@
     "             [3, 4],\n",
     "             [5, 6]], dtype='float64')\n",
     "print(a)\n",
-    "print('number of dimensions:', a.ndim) # تعداد ابعاد آرایه\n",
-    "print('shape:', a.shape) # اندازه ابعاد آرایه\n",
-    "print('size:', a.size) # تعداد خانه‌های آرایه\n",
-    "print('dtype:', a.dtype) # نوع داده آرایه"
+    "print('number of dimensions:', a.ndim)\n",
+    "print('shape:', a.shape) \n",
+    "print('size:', a.size) \n",
+    "print('dtype:', a.dtype) "
    ],
    "outputs": [
     {
@@ -1388,42 +1403,47 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-26T14:25:52.179146Z",
-     "start_time": "2024-10-26T14:25:52.175448Z"
+     "end_time": "2024-11-02T14:46:03.612991Z",
+     "start_time": "2024-11-02T14:46:03.604295Z"
     }
    },
    "source": [
-    "arr = np.random.randint(0, 24, (4, 6))\n",
+    "import numpy as np\n",
+    "arr = np.random.randint(0, 24, (4, 2,3))\n",
     "print(arr)\n",
-    "np.sum(arr, axis=0)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "np.sum(arr, axis=0)"
    ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[23 12 19 19  2  7]\n",
-      " [18 10  4  0 10  3]\n",
-      " [21 21 16  2 11 17]\n",
-      " [15 12 10 11  2 14]]\n"
+      "[[[14 22  2]\n",
+      "  [ 6  1 12]]\n",
+      "\n",
+      " [[12 21 16]\n",
+      "  [ 3  2  9]]\n",
+      "\n",
+      " [[ 8 12  1]\n",
+      "  [18  2  4]]\n",
+      "\n",
+      " [[10 17  1]\n",
+      "  [14 15 22]]]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([77, 55, 49, 32, 25, 41])"
+       "array([[44, 72, 20],\n",
+       "       [41, 20, 47]])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 50
+   "execution_count": 2
   },
   {
    "cell_type": "code",
@@ -1510,7 +1530,7 @@
    },
    "source": [
     "a = np.array([[2, 3, 4],[6, 0 , 0], [0, 0, 1]])\n",
-    "print(a)\n"
+    "print(a)"
    ],
    "outputs": [
     {
