add new csv file and adding new parts

--- a/Course/Numpy-Learning-1.ipynb
+++ b/Course/Numpy-Learning-1.ipynb
@@ -1777,6 +1777,122 @@
     }
    ],
    "execution_count": 60
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "\n",
+    "# Starting new tests\n"
+   ]
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-30T15:10:50.838869Z",
+     "start_time": "2024-11-30T15:10:50.830947Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import numpy as np\n",
+    "arr = np.random.randint(0, 10, (4, 5))\n",
+    "print(arr)"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[8 0 9 8 6]\n",
+      " [5 2 3 5 4]\n",
+      " [4 6 6 2 5]\n",
+      " [1 1 7 9 5]]\n"
+     ]
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-30T15:11:53.162143Z",
+     "start_time": "2024-11-30T15:11:53.159034Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "arr2 = np.random.randint(0, 10, (4, 5))\n",
+    "print(arr2)"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 5 1 8 2]\n",
+      " [4 4 5 2 6]\n",
+      " [0 6 4 1 7]\n",
+      " [3 7 5 1 7]]\n"
+     ]
+    }
+   ],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-30T15:19:38.409011Z",
+     "start_time": "2024-11-30T15:19:35.384280Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "print(arr * arr2)\n",
+    "%timeit arr* arr2"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  0  9 64 12]\n",
+      " [20  8 15 10 24]\n",
+      " [ 0 36 24  2 35]\n",
+      " [ 3  7 35  9 35]]\n",
+      "364 ns ± 48.5 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "execution_count": 13
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-30T15:18:20.249276Z",
+     "start_time": "2024-11-30T15:18:16.790351Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "mul = np.multiply(arr, arr2)\n",
+    "print(mul)\n",
+    "%timeit np.multiply(arr, arr2)"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  0  9 64 12]\n",
+      " [20  8 15 10 24]\n",
+      " [ 0 36 24  2 35]\n",
+      " [ 3  7 35  9 35]]\n",
+      "432 ns ± 151 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "execution_count": 12
   }
  ],
  "metadata": {
